# data-structures-in-c

./: .gitignore  CMakeLists.txt  LICENSE  bt.sh  common.c  common.h  doubly_linked_list.c  doubly_linked_list.h  doubly_linked_node.c  doubly_linked_node.h  library.h  presidents_of_united_states.c  presidents_of_united_states.h  presidents_of_united_states_test.c  queue.h  singly_linked_list.c  singly_linked_list.h  singly_linked_node.c  singly_linked_node.h  singly_linked_node_test.c  stack.c  stack.h
array_list/: CMakeLists.txt
array_list/apps/: a.c  array_list_insert_first_delete_first.c  array_list_insert_first_delete_last.c  array_list_insert_last_delete_first.c  array_list_insert_last_delete_last.c  array_list_random_integers.c
array_list/include/: array_list.h
array_list/src/: array_list.c
list/: CMakeLists.txt
list/apps/: array_list_insert_first_delete_first.c  array_list_insert_first_delete_last.c  array_list_insert_last_delete_first.c  array_list_insert_last_delete_last.c
list/include/: array_list.h  doubly_linked_list.h  doubly_linked_node.h  list.h  singly_linked_list.h  singly_linked_node.h
list/src/: array_list.c  doubly_linked_list.c  doubly_linked_node.c  list.c  singly_linked_list.c  singly_linked_node.c
miscellaneous/: CMakeLists.txt
miscellaneous/apps/: presidents_of_united_states_find_by_presidency.c  presidents_of_united_states_list_up.c  presidents_of_united_states_print_current.c  presidents_of_united_states_print_first.c  print_integer_limits.c  print_presidents_of_united_states.c
miscellaneous/include/: misc.h  miscellaneous.h  presidents_of_united_states.h  presidents_of_united_states_misc.h
miscellaneous/src/: misc.c  miscellaneous.c  presidents_of_united_states.c  presidents_of_united_states.txt  presidents_of_united_states_misc.c
miscellaneous/test/: miscellaneous_ordinal_g_test.c  miscellaneous_ordinal_test.cpp  miscellaneous_snprintf_ordinal_g.c  miscellaneous_snprintf_ordinal_g_unsigned_char_test.c  miscellaneous_snprintf_ordinal_g_unsigned_int_test.c  miscellaneous_snprintf_ordinal_g_unsigned_long_int_test.c  miscellaneous_snprintf_ordinal_g_unsigned_long_long_int_test.c  miscellaneous_snprintf_ordinal_g_unsigned_short_int_test.c  miscellaneous_snprintf_ordinal_test.cpp  miscellaneous_sprintf_ordinal_g.c  miscellaneous_sprintf_ordinal_g_unsigned_char_test.c  miscellaneous_sprintf_ordinal_g_unsigned_int_test.c  miscellaneous_sprintf_ordinal_g_unsigned_long_int_test.c  miscellaneous_sprintf_ordinal_g_unsigned_long_long_int_test.c  miscellaneous_sprintf_ordinal_g_unsigned_short_int_test.c  miscellaneous_sprintf_ordinal_test.cpp  miscellaneous_test.cpp
presidents_of_united_states/: CMakeLists.txt
presidents_of_united_states/apps/: presidents_of_united_states_find_by_presidency.c  presidents_of_united_states_find_by_president.c  presidents_of_united_states_find_latest.c  presidents_of_united_states_list_up.c  presidents_of_united_states_print.c  presidents_of_united_states_print1.c  presidents_of_united_states_print2.c  presidents_of_united_states_print_current.c  presidents_of_united_states_print_first.c  presidents_of_united_states_print_latest.c
presidents_of_united_states/include/: presidents_of_united_states.h  presidents_of_united_states_misc.h
presidents_of_united_states/src/: presidents_of_united_states.c  presidents_of_united_states.txt  presidents_of_united_states_misc.c
queue/: CMakeLists.txt
queue/include/: array_list_queue.h  list_queue.h  queue.h
queue/src/: array_list_queue.c  list_queue.c  queue.c
singly_linked_list/: CMakeLists.txt
singly_linked_list/apps/: presidents_of_united_states_print1.c  presidents_of_united_states_print2.c
singly_linked_list/include/: singly_linked_list.h  singly_linked_node.h
singly_linked_list/src/: singly_linked_list.c  singly_linked_node.c
stack/: CMakeLists.txt
stack/include/: array_list_stack.h  list_stack.h  singly_linked_list_stack.h  stack.h
stack/src/: array_list_stack.c  list_stack.c  singly_linked_list_stack.c  stack.c
