include_directories(include)

add_library(singly_linked_list include/singly_linked_node.h src/singly_linked_node.c, include/singly_linked_list.h src/singly_linked_list.c)

#add_executable(presidents_of_united_states_print1 include/presidents_of_united_states.h src/presidents_of_united_states.c apps/presidents_of_united_states_print1.c)
#add_executable(presidents_of_united_states_print2 include/presidents_of_united_states.h src/presidents_of_united_states.c apps/presidents_of_united_states_print2.c)
#add_executable(presidents_of_united_states_print3 include/presidents_of_united_states.h src/presidents_of_united_states.c apps/presidents_of_united_states_print3.c)
